--- a/src/app/components/thoughts/create-thought/create-thought.component.html
+++ b/src/app/components/thoughts/create-thought/create-thought.component.html
@@ -6,14 +6,14 @@
   </header>
   <form>
     <label for="thought">Thought</label>
-    <input type="textarea" class="input" id="thought" name="thought" placeholder="Type a thought">
+    <input type="textarea" class="input" id="thought" name="thought" placeholder="Type a thought" [(ngModel)]="thought.content">
     <label for="authorship">Authorship or source</label>
-    <input type="text" class="input" id="authorship" name="authorship" placeholder="Type the authorship or the source">
+    <input type="text" class="input" id="authorship" name="authorship" placeholder="Type the authorship or the source" [(ngModel)]="thought.authorship">
     <label for="model">Select the card model:</label>
     <div class="container-radio">
       <div class="radio-model">
         <label for="model1">
-          <input type="radio" id="model1" value="model1" name="model-card">
+          <input type="radio" id="model1" value="model1" name="model-card" [(ngModel)]="thought.model">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -22,13 +22,13 @@
         Preview:
         <div class="model model1 ff-roboto-mono">
           <img src="../../../../assets/images/model1.png" alt="Blue quotes">
-          <p class="content">Content goes here</p>
-          <p class="authorship"><b>Authorship goes here</b></p>
+          <p class="content">{{ thought.content }}</p>
+          <p class="authorship"><b>{{ thought.authorship }}</b></p>
         </div>
       </div>
       <div class="radio-model">
         <label for="model2">
-          <input type="radio" id="model2" value="model2" name="model-card">
+          <input type="radio" id="model2" value="model2" name="model-card" [(ngModel)]="thought.model">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -37,13 +37,13 @@
         Preview:
         <div class="model model2 ff-roboto-mono">
           <img src="../../../../assets/images/model2.png" alt="Light blue quotes">
-          <p class="content">Content goes here</p>
-          <p class="authorship"><b>Authorship goes here</b></p>
+          <p class="content">{{ thought.content }}</p>
+          <p class="authorship"><b>{{ thought.authorship }}</b></p>
         </div>
       </div>
       <div class="radio-model">
         <label for="model3">
-          <input type="radio" id="model3" value="model3" name="model-card">
+          <input type="radio" id="model3" value="model3" name="model-card" [(ngModel)]="thought.model">
           <div class="custom-radio">
             <span></span>
           </div>
@@ -52,16 +52,16 @@
         Preview:
         <div class="model model3 ff-roboto-mono">
           <img src="../../../../assets/images/model3.png" alt="Green quotes">
-          <p class="content">Content goes here</p>
-          <p class="authorship"><b>Authorship goes here</b></p>
+          <p class="content">{{ thought.content }}</p>
+          <p class="authorship"><b>{{ thought.authorship }}</b></p>
         </div>
       </div>
     </div>
     <div class="actions">
-      <button class="button">
+      <button (click)="createThought()" class="button">
         Save
       </button>
-      <button class="button">
+      <button (click)="cancel()" class="button">
         Cancel
       </button>
     </div>
