created the list and create thought functions

--- a/src/app/components/thoughts/create-thought/create-thought.component.html
+++ b/src/app/components/thoughts/create-thought/create-thought.component.html
@@ -61,7 +61,7 @@
       <button (click)="createThought()" class="button">
         Save
       </button>
-      <button (click)="cancel()" routerLink="/listThought" class="button">
+      <button (click)="cancel()" class="button">
         Cancel
       </button>
     </div>
