created the component to delete thoughts

--- a/src/app/components/thoughts/thought/thought.component.html
+++ b/src/app/components/thoughts/thought/thought.component.html
@@ -6,7 +6,7 @@
     <button class="button-edit">
       <img src="/assets/images/icon-edit.png" alt="Edit Icon">
     </button>
-    <button class="button-delete">
+    <button class="button-delete" routerLink="/thoughts/deleteThought/{{thought.id}}">
       <img src="/assets/images/icon-delete.png" alt="Delete Icon">
     </button>
   </div>
