--- a/src/app/components/thoughts/list-thought/list-thought.component.css
+++ b/src/app/components/thoughts/list-thought/list-thought.component.css
@@ -1,3 +1,14 @@
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.buttons button {
+  margin-left: 10px;
+  margin-right: 2px;
+}
+
 .mural {
   display: flex;
   flex-wrap: wrap;
